--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "availity-reactstrap-validation": "^2.7.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
+    "node-sass": "^4.13.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slick": "^0.27.14",
     "react-toastify": "^6.2.0",
     "reactstrap": "^8.8.1",
     "redux": "^4.0.5",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
